<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_10">

    <TextView
        android:id="@+id/choice_title"
        style="@style/style_13_333333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_person_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        app:layout_constraintLeft_toRightOf="@id/choice_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choice_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/space_20"
        android:gravity="center_vertical"
        android:text="@string/exchange"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>
